Changes
=======

3.4.5 (unreleased)
------------------

- ...

3.4.4 (2008-08-18)
------------------

* Fixed bug #98440 (interfaces lost on retried request)

* LP #98284: Pass the ``size`` argument to readline, as the version of
  twisted used in zope.app.twisted supports it

3.4.3 (2008-07-31)
------------------

* LP #253362: better dealing with malformed HTTP_ACCEPT_CHARSET headers

3.4.2 (2007-12-07)
------------------

* Made segmentation of URLs not strip (trailing) whitespace from path segments
  to allow URLs ending in %20 to be handled correctly. (#172742)

3.4.1 (2007-09-29)
------------------

No changes since 3.4.1b2.

3.4.1b2 (2007-08-02)
--------------------

* zope.publisher now works on Python 2.5.

* Fix a problem with request.get() when the object that's to be
  retrieved is the request itself.

3.4.1b1 (2007-07-13)
--------------------

No changes.

3.4.0b2 (2007-07-05)
--------------------

* Fix https://bugs.launchpad.net/zope3/+bug/122054:
  HTTPInputStream understands both the CONTENT_LENGTH and
  HTTP_CONTENT_LENGTH environment variables. It is also now tolerant
  of empty strings and will treat those as if the variable were
  absent.

3.4.0b1 (2007-07-05)
--------------------

* Fix caching issue. The input stream never got cached in a temp file 
  because of a wrong content-length header lookup. Added CONTENT_LENGTH 
  header check in addition to the previous used HTTP_CONTENT_LENGTH. The 
  HTTP\_ prefix is sometimes added by some CGI proxies, but CONTENT_LENGTH
  is the right header info for the size.

* Fix https://bugs.launchpad.net/zope3/+bug/98413:
  HTTPResponse.handleException should set the content type

3.4.0a1 (2007-04-22)
--------------------

Initial release as a separate project, corresponds to zope.publisher
from Zope 3.4.0a1