@@ -4,7 +4,8 @@ Changes
 3.4.5 (unreleased)
 ------------------
 
-- ...
+* Fix the LP #98284 fix: do not pass ``size`` argument of None that causes
+  cStringIO objects to barf with a TypeError.
 
 3.4.4 (2008-08-18)
 ------------------
